--- a/profiles/23009201238.md
+++ b/profiles/23009201238.md
@@ -1,11 +1,12 @@
 ## 个人介绍
 我是西安电子科技大学软件工程专业（智能软件方向）的学生，也是我们小组的组长。  
-平时对前端开发很感兴趣，也喜欢用 Claude 等 AI 工具来提升写代码的效率。  
+平时对前端开发很感兴趣，也喜欢用 Claude、ChatGpt、Gemini 等 AI 工具来提升写代码的效率。  
 对 C 和 C++ 比较熟悉，Java 和 Python 略有研究。
 
 ## 对课程的期待
 希望通过这门课程更系统地掌握 Git 和团队协作开发的流程，  
 学会在开源项目中高效沟通、分工与协作，为以后的真实项目打下基础。
+个人有点小建议希望在课前就发布作业，边学边弄，提高效率。
 
 ## 感兴趣的开源领域
 前端开发、AI 辅助编程、教育类项目、智能工具。
