--- a/profiles/23009201238.md
+++ b/profiles/23009201238.md
@@ -4,7 +4,7 @@
 对 C 和 C++ 比较熟悉，Java 和 Python 略有研究。
 
 ## 对课程的期待
-希望通过这门课程更系统地掌握 Git 和团队协作开发的流程，  
+希望通过这门课程更系统地掌握 Git 和团队协作开发的流程。  
 学会在开源项目中高效沟通、分工与协作，为以后的真实项目打下基础。  
 个人有点小建议希望在课前就发布作业，边学边弄，提高效率。
 
